<resources>
    <!-- General -->
    <string name="ok">OK</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- Menús y Pantallas -->
    <string name="app_name">LoginBase</string>
    <string name="home">Home</string>
    <string name="favs">Favs</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="register">Registrar Usuario</string>
    <string name="recovery">Recuperar Contraseña</string>
    <string name="verifyEmail">Verificar Email </string>

    <!-- Botones -->
    <string name="continuar">Continuar</string>
    <string name="volver">Volver</string>
    <string name="recoveryPassword">RECUPERAR CONTRASEÑA</string>
    <string name="crearCuenta">CREAR MI CUENTA</string>

    <!-- Mensajes -->
    <string name="correoElectronico">Correo electrónico</string>
    <string name="password">Password</string>
    <string name="exampleEmail">example@gmail.com</string>
    <string name="examplePassword">contraseña (mínimo 6 caracteres)</string>
    <string name="msgInsertEmail">Introduce tu correo electrónico</string>
    <string name="msgVerifyEmail">Para completar el registro verifica tu correo y después haz clic en continuar.</string>

    <!-- Errors -->
    <string name="alertError">¡ERROR!</string>
    <string name="alertWarning">¡ALERTA!</string>
    <string name="error_connection">No se ha podido establecer conexión. Revisa que tengas conexión a internet y vuelve a intentarlo</string>
    <string name="error_credentials">El usuario o la contraseña no son válidos</string>
    <string name="error_user_already_exists">Ya existe un usuario con ese email</string>
    <string name="error_unknown">Ha ocurrido un error desconocido</string>

    <!-- Login -->
    <string name="login_txt_email">Correo electrónico</string>
    <string name="login_hint_email">example@gmail.com</string>
    <string name="login_txt_password">Password</string>
    <string name="login_hint_password">Contraseña (mínimo 6 caracteres)</string>
    <string name="login_txt_recovery_password">¿Has olvidado tu contraseña?</string>
    <string name="login_btn_login">Iniciar sesión</string>
    <string name="login_txt_register">¿Todavía no tienes cuenta? Regístrate</string>

    <!-- Register -->
    <string name="register_error_invalid_email">Escribe un correo electrónico válido</string>
    <string name="register_error_password_length">La contraseña debe tener mínimo 6 caracteres</string>
    <string name="register_error_equal_password">"Las contraseñas deben coincidir"</string>

    <!-- Recovery password -->
    <string name="recovery_password_error_invalid_email">Introduce un email válido</string>

    <!-- Check Email -->
    <string name="check_email_verification_email_sent">Se ha enviado un correo de verificación a tu correo electrónico. Debes verificar tu cuenta antes de continuar</string>
    <string name="check_email_verify_your_account">Debes verificar la cuenta antes de continuar. Revisa tu bandeja de entrada</string>

</resources>